--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: python
 python:
     - "2.7"
 
+# Cache PlatformIO packages using Travis CI container-based infrastructure
+sudo: false
+cache:
+    directories:
+        - "~/.platformio"
+
 env:
     - LINUX_SRC=linux
     - PLATFORMIO_CI_SRC=examples/Boards_BLE/Adafruit_Bluefruit_LE
