--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=0.4.0
 author=Volodymyr Shymanskyy
 maintainer=Volodymyr Shymanskyy <volodymyr@blynk.cc>
 sentence=Build a smartphone app for your project in minutes!
-paragraph=Blynk allows creating IoT solutions easily and works with Arduino, ESP8266, Raspberry Pi, Intel Edison/Galileo, LinkIt ONE, Particle Core/Photon, Energia, MBED, LightBlue Bean, ...
+paragraph=It supports  WiFi, BLE, Bluetooth, Ethernet, GSM, USB, Serial. Works with many boards like ESP8266, ESP32, Arduino UNO, Nano, Due, Mega, Zero, MKR100, Yun, Raspberry Pi, Particle, Energia, ARM mbed, Intel Edison/Galileo/Joule, BBC micro:bit, DFRobot, RedBearLab, Microduino, LinkIt ONE ...
 category=Communication
 url=http://blynk.cc
 architectures=*
