--- a/extras/formatter.conf
+++ b/extras/formatter.conf
@@ -9,7 +9,7 @@
 indent=spaces=2
 
 # also indent macros
-indent-preprocessor
+indent-preproc-block
 
 # indent classes, switches (and cases), comments starting at column 1
 indent-classes
