--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
     - PLATFORMIO_CI_SRC=examples/Boards_Ethernet/Energia_Ethernet PLATFORMIO_CI_EXTRA_ARGS="--board=lptm4c1294ncpdt"
     # - PLATFORMIO_CI_SRC=examples/Boards_Ethernet/Intel_Galileo
     # - PLATFORMIO_CI_SRC=examples/Boards_Ethernet/Seeed_EthernetV2_0
-    # - PLATFORMIO_CI_SRC=examples/Boards_GSM/SIM800_SIM900
+    - PLATFORMIO_CI_SRC=examples/Boards_GSM/SIM800_SIM900 PLATFORMIO_CI_EXTRA_ARGS="--board=leonardo"
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/ATtiny85 PLATFORMIO_CI_EXTRA_ARGS="--board=attiny85"
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Arduino_Serial_USB
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Arduino_SoftwareSerial
@@ -71,7 +71,7 @@ env:
     - PLATFORMIO_CI_SRC=examples/Boards_With_HTTP_API/Arduino_Ethernet
     - PLATFORMIO_CI_SRC=examples/Boards_With_HTTP_API/Arduino_GSM
     - PLATFORMIO_CI_SRC=examples/Boards_With_HTTP_API/ESP8266 PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2"
-    # - PLATFORMIO_CI_SRC=examples/Boards_With_HTTP_API/SIM800_SIM900
+    - PLATFORMIO_CI_SRC=examples/Boards_With_HTTP_API/SIM800_SIM900 PLATFORMIO_CI_EXTRA_ARGS="--board=leonardo"
     - PLATFORMIO_CI_SRC=examples/Export_Demo/Template_ESP8266 PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2 --project-option='lib_ignore=WiFi101' --project-option='build_flags=-DBOARD_LED_PIN_WS2812 -DUSE_TICKER'"
     - PLATFORMIO_CI_SRC=examples/Export_Demo/Template_MKR1000 PLATFORMIO_CI_EXTRA_ARGS="--board=mkr1000USB --project-option='build_flags=-DUSE_TIMER_FIVE'"
     - PLATFORMIO_CI_SRC=examples/Export_Demo/myPlant_ESP8266 PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2 --project-option='lib_ignore=WiFi101' --project-option='build_flags=-DBOARD_LED_PIN_WS2812 -DUSE_TICKER'"
@@ -145,8 +145,9 @@ install:
     # http://platformio.org/lib/show/177/Adafruit_BluefruitLE_nRF51
     # http://platformio.org/lib/show/1192/FlashStorage
     # http://platformio.org/lib/show/1285/Timer5
+    # http://platformio.org/lib/show/1287/TinyGSM
 
-    - platformio lib -g install 17 28 91 418 419 420 65 44 31 19 299 259 177 1192 1285
+    - platformio lib -g install 17 28 91 418 419 420 65 44 31 19 299 259 177 1192 1285 1287
     - platformio lib -g install https://github.com/vshymanskyy/BlynkESP8266.git
 
 script: make travis-build
