--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ env:
     - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Adafruit_Bluefruit_LE
     - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Adafruit_Feather_32u4_BLE PLATFORMIO_CI_EXTRA_ARGS="--board=feather32u4 --project-option='lib_deps=SoftwareSerial'"
     - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Arduino_101_BLE PLATFORMIO_CI_EXTRA_ARGS="--board=genuino101"
-    - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/BBC_MicroBit
+    - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/BBC_MicroBit PLATFORMIO_CI_EXTRA_ARGS="--board=uno --project-option='lib_deps=SPI'"
     - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/DFRobot_Bluno_BLE_Link PLATFORMIO_CI_EXTRA_ARGS="--board=leonardo"
     - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/LightBlue_Bean PLATFORMIO_CI_EXTRA_ARGS="--board=lightblue-bean"
     - PLATFORMIO_CI_SRC=examples/Boards_Bluetooth/Microduino_BLE PLATFORMIO_CI_EXTRA_ARGS="--board=leonardo"
