--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,6 @@ env:
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Digistump_Digispark PLATFORMIO_CI_EXTRA_ARGS="--board=digispark-pro"
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Energia_Serial_USB PLATFORMIO_CI_EXTRA_ARGS="--board=lplm4f120h5qr"
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/Teensy3 PLATFORMIO_CI_EXTRA_ARGS="--board=teensy31"
-    - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/User_Defined_Connection
     - PLATFORMIO_CI_SRC=examples/Boards_USB_Serial/chipKIT_Uno32 PLATFORMIO_CI_EXTRA_ARGS="--board=uno_pic32"
     - PLATFORMIO_CI_SRC=examples/Boards_WiFi/Arduino_MKR1000
     - PLATFORMIO_CI_SRC=examples/Boards_WiFi/Arduino_WiFi_Shield
@@ -82,7 +81,11 @@ env:
     - PLATFORMIO_CI_SRC=examples/GettingStarted/VirtualPinRead
     - PLATFORMIO_CI_SRC=examples/GettingStarted/VirtualPinReply
     - PLATFORMIO_CI_SRC=examples/GettingStarted/VirtualPinWrite
+    - PLATFORMIO_CI_SRC=examples/More/ArduinoClient/Arduino_Ethernet
+    - PLATFORMIO_CI_SRC=examples/More/ArduinoClient/ESP8266_WiFi PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2"
     - PLATFORMIO_CI_SRC=examples/More/DHT11
+    - PLATFORMIO_CI_SRC=examples/More/DirectConnect/ESP8266_AccessPoint PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2"
+    - PLATFORMIO_CI_SRC=examples/More/DirectConnect/ESP8266_Station PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2"
     - PLATFORMIO_CI_SRC=examples/More/FormatString
     - PLATFORMIO_CI_SRC=examples/More/HandleDisconnect PLATFORMIO_CI_EXTRA_ARGS="--board=nodemcuv2"
     - PLATFORMIO_CI_SRC=examples/More/NeoPixel
